<resources>
  <string name="app_name">KeepFit</string>
  <string name="title_today">Today</string>
  <string name="title_goals">Goals</string>
  <string name="add_new_goal_title">Add new goal</string>
  <string name="edit_goal_title">Edit goal</string>
  <string name="name">Name</string>
  <string name="steps">Steps</string>
  <string name="steps_lowercase">steps</string>
  <string name="save">Save</string>
  <string name="cancel">Cancel</string>
  <string name="set_active">Set as active</string>
  <string name="active_goal">Active goal</string>
  <string name="other_goals">Other goals</string>
  <string name="add_steps">Add steps</string>
  <string name="steps_icon_description">Walking man icon</string>
  <string name="add_steps_hint">Number of steps</string>
  <string name="add">Add</string>
  <string name="history">History</string>
  <string name="allow_goal_add">Create goals</string>
  <string name="allow_goal_add_desc">Allow adding new goals</string>
  <string name="allow_goal_edit">Edit goals</string>
  <string name="allow_goal_edit_desc">If applied, inactive goals can be modified or activated</string>
  <string name="allow_goal_delete">Delete goals</string>
  <string name="allow_goal_delete_desc">Specifies whether goals can be deleted</string>
  <string name="settings">Settings</string>
  <string name="allow_history_add">Create past activities</string>
  <string name="allow_history_add_desc">Allow adding activities to the past</string>
  <string name="allow_history_edit">Past activities editing</string>
  <string name="allow_history_edit_desc">If applied, historical activities can be modified</string>
  <string name="allow_history_delete">Past activities removal</string>
  <string name="allow_history_delete_desc">Specifies whether past activities can be deleted</string>
  <string name="input_error_numeric">Please provide correct number</string>
  <string name="input_error_name">Please provide proper name</string>
  <string name="input_list_error">Please pick an item from the list</string>
  <string name="input_date_error">Please pick a date</string>
  <string name="bad_date_error">Please choose different date</string>
  <string name="date">Date</string>
  <string name="add_historical_activity">Add historical activity</string>
  <string name="goal">Goal</string>
  <string name="edit_history_entry">Edit historical activity</string>
  <string name="jump_to_date">Jump to date</string>
  <string name="nothing_to_display">Nothing to display</string>
</resources>
