<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
          android:title="@string/title_goals">
    <SwitchPreferenceCompat
            android:key="allow_goal_add"
            android:title="@string/allow_goal_add"
            android:summary="@string/allow_goal_add_desc"
            android:defaultValue="true"
    />
    <SwitchPreferenceCompat
            android:key="allow_goal_edit"
            android:title="@string/allow_goal_edit"
            android:summary="@string/allow_goal_edit_desc"
            android:defaultValue="true"
    />
    <SwitchPreferenceCompat
            android:key="allow_goal_delete"
            android:title="@string/allow_goal_delete"
            android:summary="@string/allow_goal_delete_desc"
            android:defaultValue="true"
    />
  </PreferenceCategory>
  <PreferenceCategory
          android:title="@string/history">
    <SwitchPreferenceCompat
            android:key="allow_history_add"
            android:title="@string/allow_history_add"
            android:summary="@string/allow_history_add_desc"
            android:defaultValue="true"
    />
    <SwitchPreferenceCompat
            android:key="allow_history_edit"
            android:title="@string/allow_history_edit"
            android:summary="@string/allow_history_edit_desc"
            android:defaultValue="true"
    />
    <SwitchPreferenceCompat
            android:key="allow_history_delete"
            android:title="@string/allow_history_delete"
            android:summary="@string/allow_history_delete_desc"
            android:defaultValue="true"
    />
  </PreferenceCategory>
</PreferenceScreen>