<?xml version="1.0" encoding="utf-8"?>
<layout>
  <data>
    <import type="com.mandriv.keepfit.data.goals.Goal" />
    <variable name="viewModel" type="com.mandriv.keepfit.ui.goals.GoalsViewModel"/>
  </data>
  <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:orientation="vertical"
                xmlns:android="http://schemas.android.com/apk/res/android"
  >
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    >

      <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/new_goal_name_input"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textAutoCorrect"
              android:text="@={viewModel.newGoalName}"
      />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/steps"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    >

      <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/new_goal_value_input"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="numberSigned"
              android:text="@={viewModel.newGoalValue}"
      />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/new_goal_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_active"
            android:checked="@={viewModel.newGoalActive}"
    />
  </LinearLayout>
</layout>

