<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
  <data>
    <import type="com.mandriv.keepfit.data.goals.Goal" />
    <variable name="viewModel" type="com.mandriv.keepfit.ui.newgoal.NewGoalViewModel"/>
  </data>
  <androidx.coordinatorlayout.widget.CoordinatorLayout
       xmlns:app="http://schemas.android.com/apk/res-auto"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@drawable/rounded_white">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

      <androidx.appcompat.widget.Toolbar
              android:id="@+id/toolbar"
              android:layout_width="match_parent"
              android:layout_height="?attr/actionBarSize"
              android:paddingEnd="16dp"
              android:paddingRight="16dp"
              android:paddingStart="6dp"
              android:paddingLeft="6dp"
              app:layout_collapseMode="pin"
              app:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
              app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
              app:contentInsetStartWithNavigation="0dp"
              app:navigationIcon="@drawable/ic_close_black_24dp" />

    </com.google.android.material.appbar.AppBarLayout>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:padding="16dp"
        >
          <com.google.android.material.textfield.TextInputLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/name"
                  style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          >
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_goal_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoCorrect"
                    android:text="@={viewModel.newGoalName}"
            />
          </com.google.android.material.textfield.TextInputLayout>
          <com.google.android.material.textfield.TextInputLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/steps"
                  style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          >
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_goal_value_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:text="@={viewModel.newGoalValue}"
            />
          </com.google.android.material.textfield.TextInputLayout>
          <com.google.android.material.checkbox.MaterialCheckBox
                  android:id="@+id/new_goal_active"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/set_active"
                  android:checked="@={viewModel.newGoalActive}"
          />
        </LinearLayout>
    </FrameLayout>
  </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>

