<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
  <data>
    <variable name="viewModel" type="com.mandriv.keepfit.viewmodel.history.NewHistoryViewModel"/>
  </data>
  <androidx.coordinatorlayout.widget.CoordinatorLayout
          xmlns:app="http://schemas.android.com/apk/res-auto"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@drawable/rounded_white">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

      <androidx.appcompat.widget.Toolbar
              android:id="@+id/toolbar"
              android:layout_width="match_parent"
              android:layout_height="?android:attr/actionBarSize"
              android:paddingEnd="16dp"
              android:paddingRight="16dp"
              android:paddingStart="6dp"
              android:paddingLeft="6dp"
              app:layout_collapseMode="pin"
              app:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
              app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
              app:contentInsetStartWithNavigation="0dp"
              app:navigationIcon="@drawable/ic_close_black_24dp"/>

    </com.google.android.material.appbar.AppBarLayout>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >
      <LinearLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
      >
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
          <com.google.android.material.textfield.TextInputEditText
                  android:id="@+id/date_input"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textNoSuggestions"
                  android:clickable="true"
                  android:focusable="true"
                  android:text="@{viewModel.dateString}"
          />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/goal_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/goal"
                app:errorEnabled="true"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        >
          <AutoCompleteTextView
                  android:id="@+id/goal_autocomplete"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:editable="false"
                  android:text="@={viewModel.goalName}"
          />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/steps_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/steps"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
          <com.google.android.material.textfield.TextInputEditText
                  android:id="@+id/steps_input"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="numberDecimal"
                  android:digits="0123456789"
                  android:text="@={viewModel.steps}"
          />
        </com.google.android.material.textfield.TextInputLayout>
      </LinearLayout>
    </FrameLayout>
  </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>

